--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "nba_player_data_collector",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Caden Midkiff",
+  "license": "MIT",
   "dependencies": {
     "config": "^3.3.8",
     "mongoose": "^6.8.0",
@@ -16,5 +15,14 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/asucaden/NBA_Player_Data_Collector.git"
+  },
+  "bugs": {
+    "url": "https://github.com/asucaden/NBA_Player_Data_Collector/issues"
+  },
+  "homepage": "https://github.com/asucaden/NBA_Player_Data_Collector#readme",
+  "description": ""
 }
