--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Caden Midkiff",
   "license": "MIT",
   "dependencies": {
+    "aws-xray-sdk": "^3.5.3",
     "config": "^3.3.8",
     "mongoose": "^6.8.0",
     "node-fetch": "^2.6.7"
